<resources>
    <string name="Mutt">Sri Kanchi Kamakoti Peetham</string>
    <string name="Temples">Temples</string>
    <string name="Hotels">Hotels</string>
    <string name="templelist">Temples in Kanchipuram</string>
    <string name="Commute">Commute</string>
    <string name="Attraction">Attractions</string>
    <string name="KamakshiAmmanTemple">Kamakshi Amman Temple</string>
    <string name="EkambareswararTemple">Ekambareswarar Temple</string>
    <string name="ChitraguptaTemple">Chitragupta Swami Temple</string>
    <string name="KailasanatharTemple">Kailasanathar Temple</string>
    <string name="VaradarajaPerumalTemple">Varadaraja Perumal Temple</string>
    <string name="KumarakottamTemple">Kumarakottam Temple</string>
    <string name="KachabeswararTemple">Kachabeswarar Temple</string>
    <string name="UlagalanthaPerumalTemple">Ulagalandha Perumal Temple</string>
    <string name="map">Take me there</string>
    <string name="att1">Mahabalipuram</string>
    <string name="mahabalipuram">Shore Temple\nPancha Rathas\nDescent of the Ganges\nGroup of Monuments\nVaraha cave Temple\nKrishna\'s Butterball\nThirukadalmallai\nMahabalipuram Beach\nKrishna Mandapam</string>
    <string name="mahabalipuram_desc">Mamallapuram, also known as Mahabalipuram, is a town in Chengalpattu district in the southeastern Indian state of Tamil Nadu, best known for the UNESCO World Heritage Site of 7th  and 8th century Hindu Group of Monuments at Mamallapuram. Mamallapuram was one of two major port cities by the 7th century within the Pallava kingdom. The town was named after Pallava king Narasimhavarman I, who was also known as Mahamalla. Along with economic prosperity, it became the site of a group of royal monuments, many carved out of the living rock. These are dated to the 7th and 8th centuries: rathas (temples in the form of chariots), mandapas (cave sanctuaries), the giant open air rock relief the Descent of the Ganges, and the Shore Temple dedicated to Shiva, Durga, Vishnu, Krishna and others. The contemporary town plan was established by the British Raj in 1827.</string>
    <string name="mbp1">Shore Temple</string>
    <string name="mbp2">Pancha Rathas</string>
    <string name="mbp3">Descent of the Ganges</string>
    <string name="mbp4">Group of Monuments</string>
    <string name="mbp5">Varaha cave Temple</string>
    <string name="mbp6">Krishna\'s Butterball</string>
    <string name="mbp7">Thirukadalmallai</string>
    <string name="mbp8">Mahabalipuram Beach</string>
    <string name="mbp9">Krishna Mandapam</string>
    <string name="pandavadootha_temple">Pandavadootha Temple</string>
    <string name="visit">Places to visit:</string>
    <string name="mbp1_desc">The Shore Temple (built in 700–728 AD) is so named because it overlooks the shore of the Bay of Bengal. It is located near Chennai in Tamil Nadu. \n\nMarco Polo and the European merchants that came to Asia after him called the site Seven Pagodas. One of these is believed to be the Shore Temple. The temple probably acted as a landmark for navigation of their ships. As it appears like a Pagoda, the name became familiar to the seafarers.</string>
    <string name="mbp2_desc">Pancha Rathas (also known as Five Rathas or Pandava Rathas) is a monument complex at Mahabalipuram, on the Coromandel Coast of the Bay of Bengal, in the Kancheepuram district of the state of Tamil Nadu, India. Pancha Rathas is an example of monolithic Indian rock-cut architecture. The complex was carved during the reign of King Narasimhavarman I (630–668 AD): the idea of realising monolithic buildings, an innovation in Indian architecture, is attributed to this ruler. The complex is under the auspices of the Archaeological Survey of India (ASI) and is part of the UNESCO World Heritage site inscribed by UNESCO as Group of Monuments at Mahabalipuram. \n\nEach of the five monuments in the Pancha Rathas complex resembles a chariot (ratha), and each is carved over a single, long stone or monolith, of granite which slopes in north-south direction with a slight incline. Though sometimes mistakenly referred to as temples, the structures were never consecrated because they were never completed following the death of Narasimhavarman I. The structures are named after the Pancha Pandavas and their common wife Draupadi, of epic Mahabharata fame. In order of their size, they include the Dharmaraja Ratha, Bhima Ratha, Arjuna Ratha, Nakula Sahadeva Ratha, and Draupadi Ratha.</string>
    <string name="mbp3_desc">Descent of the Ganges is a monument at Mamallapuram, on the Coromandel Coast of the Bay of Bengal, in the Chengalpattu district of the state of Tamil Nadu, India. Measuring 96 by 43 feet (29 m × 13 m), it is a giant open-air rock relief carved on two monolithic rock boulders. The legend depicted in the relief is the story of the descent of the sacred river Ganges to earth from the heavens led by Bhagiratha. The waters of the Ganges are believed to possess supernatural powers. The descent of the Ganges and Arjuna\'s Penance are portrayed in stone at the Pallava heritage site. The relief is more of a canvas of Indian rock cut sculpture at its best not seen anywhere in India. It is one of the Group of Monuments at Mamallapuram that were designated as a UNESCO World Heritage Site since 1984. The relief was created to celebrate the victory of Narasimhavarman 1 over Chalukiya king Pulakesin 2 . The place, now known as Mamallapuram, was earlier known by the epithet given to the king Narasimhavarman I (630–668 AD) of the Pallava Dynasty (who ruled from 4th to 9th centuries), as Mamallan, the great wrestler or great warrior. His father was king Mahendravarman I. The architectural creations at Mamallapuram, mostly attributed to Mamalla in the 7th century, adopted stone as the medium for sculpting in situ rock faces, which until then was done with some perishable material like wood or loose stones. It is part of 25 UNESCO World Heritage Cultural Sites in India, and as a protected monument, the Archaeological Survey of India(ASI)</string>
    <string name="mbp4_desc">The Group of Monuments at Mamallapuram is a collection of 7th- and 8th-century CE religious monuments in the coastal resort town of Mamallapuram, Tamil Nadu, India and a UNESCO World Heritage Site. It is on the Coromandel Coast of the Bay of Bengal, about 60 kilometres (37 mi) south of Chennai.</string>
    <string name="mbp5_desc">Varaha Cave Temple (also Adivaraha Cave Temple) is a rock-cut cave temple located at Mamallapuram, on the Coromandel Coast of the Bay of Bengal in Kancheepuram District in Tamil Nadu, India. It is part of the hill top village, which is 4 kilometres (2.5 mi) to the north of the main Mahabalipurm sites of rathas and the Shore Temple. It is an example of Indian rock-cut architecture dating from the late 7th century. The temple is one of the finest testimonial to the ancient Vishwakarma Sthapathis, of rock-cur cave architecture, out of many such caves also called mandapas. Part of the Group of Monuments at Mahabalipuram, the temple is a UNESCO World Heritage Site as inscribed in 1984 under criteria i, ii, iii and iv. The most prominent sculpture in the cave is that of Lord Vishnu in the incarnated form of a Varaha or boar lifting Bhudevi, the mother earth goddess from the sea. Also carved are many mythical figures.</string>
    <string name="mbp6_desc">Krishna\'s Butterball (also known as Vaan Irai Kal and Krishna\'s Gigantic Butterball) is a gigantic granite boulder resting on a short incline in the historical coastal resort town of Mamallapuram in Tamil Nadu state of India.  The Pallava king Narasimhavarman (630–668 CE) also made a failed attempt to move the boulder. The Indian Tamil king Raja Raja Chola (985 and 1014 CE) was inspired by the balance of this massive stone boulder and it led to the creation of never falling mud dolls called Tanjavur Bommai, which having a half-spherical base tends to come back to its original position every time one tries to make it fall. In 1908, then-governor of the city Arthur Havelock made an attempt to use seven elephants to move the boulder from its position due to safety concerns, but with no success. On October 12th 2019, Indian Prime Minister Narendra Modi and Chinese President Xi Jinping took a photo in front of Krishna\'s Butterball holding hands during their second informal summit.</string>
    <string name="mbp7_desc">Sthalasayana Perumal Temple (also called Thirukadalmallai) is at Mahabalipuram. Constructed in the Dravidian style of architecture, the temple is glorified in the Divya Prabandha, the early medieval Tamil canon of the Azhwar saints from the 6th–9th centuries AD. It is one of the 108 Divyadesam dedicated to Vishnu, who is worshipped as Sthalasayana Perumal and his consort Lakshmi as Nilamangai Thayar. The temple is believed to have been built by Pallavas, with later contributions from Medieval Cholas, Vijayanagar kings and Madurai Nayaks. References to modern day Mahabalipuram as a busy port is available in the works of Ptolemy from AD 140. There are many references to the place from Sangam Literature from third century AD. The temple is referred in the works of seventh century works of Bhoothath Azhwar and eighth century works of Thirumangai Azhwar. The port city came to prominence during the reign of Pallava kings Mahendravarman I and his son Narasimhavarman I after whom the city is named. The city was a famous port city during the reign of Medieval Cholas from the 9th century. There are inscriptions in the temple indicating grants of 1000 kulis during the 20th year of reign of Ko-Parakesarivarman.</string>
    <string name="mbp8_desc">Some 58 km south of the Chennai, there lies a spectacular beach in Tamilnadu shored by the Bay of Bengal, Mahabalipuram or locally referred as Mamallapuram. From the 8th century Shore Temple on the seashore to rock-cut sculptures and monuments like Monolithic Rathas and Caves, this bewitching tourist attraction in Tamilnadu is a perfect blend of historical significance and nature resplendence. This charming beach is one of the perfect places in India for sunbath (which is the must-do activity here), and thus, lures larger chunk tourists both domestic as well as overseas. Moreover, If you’re into windsurfing and swimming, don’t hesitate to hit the shores of the beach while playing with the moving tides. The charm of this beautiful place doesn’t end here, it also has wildlife experience to proffer to nature lovers or history buffs as there is crocodile bank and snake venom extracting center situated just a few km away from the beach. Furthermore, what catches the tourists eyes more in Mahabalipuram is the special event of Dance Festival which held every year in December or January.</string>
    <string name="mbp9_desc">Mandapa of Krishna or Krishna Mandapam is a monument at Mahabalipuram, on the Coromandel Coast of the Bay of Bengal, in the Kancheepuram district of the state of Tamil Nadu, India. It is part of the Group of Monuments at Mahabalipuram, a UNESCO World Heritage Site inscribed in 1984. It is located on a hillock next to the open rock relief of Descent of the Ganges (Mahabalipuram).  It is constituted by an originally open-air bas-relief dedicated to Lord Krishna, dating to the mid-seventh century, which was later enclosed within a mandapa in the 16th century during the Vijayanagara Empire. Notable carvings inside are sculpted panels that bring out the story of Krishna lifting the Govardhana Hill to protect the cowherds and gopis (milk maids) from heavy rains and floods the most poetic and endearing Indian or Angkor sculpture-based representation of this legend and there are also scenes of Krishna frolicking with the milk maids.</string>
    <string name="yatothkari_temple">Yathothkari Perumal Temple</string>
    <string name="astabujakaram">Astabujakaram Temple</string>
    <string name="nilthingal_thundam">Nilthingalthundam perumal Temple</string>
</resources>