<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Att1"
    android:background="@drawable/cust_btn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/att1"
            android:fontFamily="@font/montserrat"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahabalipuram_desc"
            android:fontFamily="@font/montserrat"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visit"
            android:textColor="@android:color/holo_red_light"
            android:fontFamily="@font/montserrat"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mahabalipuram"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp1"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp1_desc"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp2"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp2_desc"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp3"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp3_desc"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp4"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp4_desc"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp5"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp5_desc"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp6"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp6_desc"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp7"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp7_desc"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp8"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp8_desc"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp9"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/holo_red_light"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbp9_desc"
            android:textColor="@android:color/black"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/attm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:background="@drawable/button_map"
            android:textColor="@android:color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>