<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_stars_black_24dp"
        android:shortcutDisabledMessage="@string/Attraction"
        android:shortcutId="static4"
        android:shortcutLongLabel="@string/Attraction"
        android:shortcutShortLabel="@string/Attraction">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.HomeScreen"
            android:targetPackage="com.example.enroutekanchi"/>
        <intent
            android:action="android:intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.Attractions"
            android:targetPackage="com.example.enroutekanchi"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_commute"
        android:shortcutDisabledMessage="@string/Commute"
        android:shortcutId="static3"
        android:shortcutLongLabel="@string/Commute"
        android:shortcutShortLabel="@string/Commute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.HomeScreen"
            android:targetPackage="com.example.enroutekanchi"/>
        <intent
            android:action="android:intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.Commute"
            android:targetPackage="com.example.enroutekanchi"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_hotelvec"
        android:shortcutDisabledMessage="@string/Hotels"
        android:shortcutId="static2"
        android:shortcutLongLabel="@string/Hotels"
        android:shortcutShortLabel="@string/Hotels"
        >
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.HomeScreen"
            android:targetPackage="com.example.enroutekanchi"/>
        <intent
            android:action="android:intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.HotelList"
            android:targetPackage="com.example.enroutekanchi"/>
    </shortcut>
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_pillar"
        android:shortcutDisabledMessage="@string/Temples"
        android:shortcutId="static1"
        android:shortcutLongLabel="@string/Temples"
        android:shortcutShortLabel="@string/Temples">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.HomeScreen"
            android:targetPackage="com.example.enroutekanchi"/>
        <intent
            android:action="android:intent.action.VIEW"
            android:targetClass="com.example.enroutekanchi.ListTemples"
            android:targetPackage="com.example.enroutekanchi"/>
    </shortcut>
</shortcuts>